--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -24,6 +24,10 @@ jobs:
       - if: startsWith(github.event.issue.title, 'WRITE_TREND') == true
         name: Write trend to database
         run: deno run -q --allow-read --allow-write --allow-run --allow-net --allow-env --unstable gh_actions/write_trends_action.ts '${{ github.event.issue.body }}'
+
+      - if: startsWith(github.event.issue.title, 'WRITE_PRODUCT') == true
+        name: Write trend to database
+        run: deno run -q --allow-read --allow-write --allow-run --allow-net --allow-env --unstable gh_actions/write_products_action.ts '${{ github.event.issue.body }}'
         
       - name: Commit & Push changes
         uses: actions-js/push@master
@@ -39,3 +43,10 @@ jobs:
           comment: |
             Trend data successfully inserted. Closing issue...
         
+
+      - if: startsWith(github.event.issue.title, 'WRITE_PRODUCT') == true
+        name: Close Issue
+        uses: peter-evans/close-issue@v2
+        with:
+          comment: |
+            Product data successfully inserted. Closing issue...
