--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         run: deno lint
 
       - name: Create coverage files
-        run: deno test --allow-read --allow-write --coverage=coverage # create coverage files
+        run: deno test --allow-read --allow-write --allow-net --coverage=coverage # create coverage files
 
       - name: Create coverage report
         run: deno coverage ./coverage --lcov > coverage.lcov # create coverage report
