fix json reading via file

--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -22,6 +22,9 @@ jobs:
           
       - name: Check out repo
         uses: actions/checkout@v2
+        with:
+          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
+          fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
         
       - if: startsWith(github.event.issue.title, 'WRITE_TREND') == true
         name: Write trend to database
