--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -42,11 +42,15 @@ jobs:
         run: deno run -q --allow-read --allow-write --allow-run --allow-net --allow-env --unstable cli/write_products.ts 'data.json'
         
       - name: Commit & Push changes
-        uses: actions-js/push@master
+        uses: Wandalen/wretry.action@v1.0.11
         with:
-          github_token: ${{ secrets.GH_TOKEN }}
-          branch: main
-          force: true
+          action: actions-js/push@master
+          with:
+            github_token: ${{ secrets.GH_TOKEN }}
+            branch: main
+            force: true
+          attempt_limit: 5
+          attempt_delay: 2000
           
       - if: startsWith(github.event.issue.title, 'WRITE_TREND') == true
         name: Close Issue
