chore: skip *.db update

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,12 @@
 name: Continuous Integration
 
-paths-ignore:
-  - '**.db'
-
 on:
   push:
-    branches: [main]
+    branches: 
+      - main
     paths-ignore:
       - '**.db'
+
   pull_request:
     branches: [main]
 
