--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -30,18 +30,7 @@ jobs:
         name: Write trend to database
         run: deno run -q --allow-read --allow-write --allow-run --allow-net --allow-env --unstable cli/write_trends.ts '${{ github.event.issue.body }}'
 
-      - if: startsWith(github.event.issue.title, 'WRITE_PRODUCT_SHOPEE') == true
-        name: Save Product to JSON
-        uses: jsdaniell/create-json@1.1.2
-        with:
-          name: "data.json"
-          json: ${{ github.event.issue.body }}
-
-      - if: startsWith(github.event.issue.title, 'WRITE_PRODUCT_SHOPEE') == true
-        name: Write Product to database
-        run: deno run -q --allow-read --allow-write --allow-run --allow-net --allow-env --unstable cli/write_products.ts 'data.json'
-
-      - if: startsWith(github.event.issue.title, 'WRITE_PRODUCT_TOKOPEDIA') == true
+      - if: startsWith(github.event.issue.title, 'WRITE_PRODUCT') == true
         name: Write Product to database
         run: deno run -q --allow-read --allow-write --allow-run --allow-net --allow-env --unstable cli/write_products_gist.ts '${{github.event.issue.body}}'
         
