--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
            echo GH_TOKEN=$GH_TOKEN >> .env
            export $(cat .env | xargs)
-           deno run -q --allow-read --allow-write --allow-run --allow-net --allow-env --unstable cli/write_products_gist.ts '${{github.event.issue.body}}'
+           deno run -q --allow-read --allow-write --allow-run --allow-net --allow-env --unstable cli/write_products_gist.ts ${{github.event.issue.body}}
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         
