--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         image: salrashid123/squidproxy
         ports:
           - 3128:3128
-        options: -it /apps/squid/sbin/squid -NsY -f /apps/squid.conf.forward
+        options: -it --entrypoint "/bin/bash -c /apps/squid/sbin/squid -NsY -f /apps/squid.conf.forward &"
     
     steps:
       - name: Setup deno
