--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,3 +41,8 @@ jobs:
         uses: codecov/codecov-action@v1.0.10 # upload the report on Codecov
         with:
           file: ./coverage.lcov
+
+      - name: Collect coverage on PR
+        uses: romeovs/lcov-reporter-action@v0.2.16
+        with:
+            lcov-file: ./coverage/lcov
