--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,3 +46,4 @@ jobs:
         uses: romeovs/lcov-reporter-action@v0.2.16
         with:
             lcov-file: ./coverage/lcov
+            github-token: ${{ secrets.GH_TOKEN }}
